fix up sản phẩm đấu giá

--- a/DoAnWeb2/client_src/banSanPham.html
+++ b/DoAnWeb2/client_src/banSanPham.html
@@ -72,7 +72,7 @@
           <div class="form-group">
             <label for="txtMoTa" class="col-sm-2 control-label">Mô Tả:*</label>
             <div class="col-sm-10">
-              <textarea name="editor" cols="125" rows="5" id="txtMoTa"></textarea>
+              <textarea rows="5" id="txtMoTa"></textarea>
             </div>
           </div>
           <br/>   
@@ -84,7 +84,7 @@
           </div>   
           <div  class="form-group">
             <div  align="center"class="col-sm-offset-2 col-sm-5">
-              <button id="btnUp" type="submit" class="btn btn-primary">
+              <button id="btnUp" class="btn btn-primary">
                 <span class="glyphicon glyphicon-plus"></span>
                 Đăng Bán
               </button>
@@ -94,9 +94,7 @@
       </div>
     </div>
   </div>
-  <script>
-    CKEDITOR.replace('editor');
-  </script>
+  
   <script src="assets/jquery-3.1.1.min.js"></script>
   <script src="assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
   <script src="assets/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
